--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 		<title>ImageInfo</title>
 	</head>
 	<body>
+		<h3>Upload any image file and result will be a json object stating name, resolution, and size of image file.</h3>
 		{% block content %} {% endblock %}
 	</body>
 </html>	
